	  I-O status values

2018-07-14  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (get_screen_item_line_and_col): fixed bug #514, where
	  length of elementary items with a LINE clause was ignored when
	  calculating the COL of subsequent items.

2018-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): display maximum size on overflow

2018-07-04  Ron Norman <rjn@inglenet.com>
	* common.h: Added COB_MF_LS_SPLIT flag
	* fileio.c:
	  Added check for IO_fdname having 'ls_split' for 
	  Micro Focus compatible LINE SEQUENTIAL files.
	  When a record is longer than the program was compiled for
	  Micro Focus will return the extra data as an extra record.
	  This is the result for when IO_fdname has ls_split.
	  For 'GC' format LINE SEQUENTIAL or for 'nols_split' a long
	  record will get truncated and skip to the next LF.

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 again; this time
	  where $ would incorrectly float before a string of +/-.

2018-06-24  Simon Sobisch <simonsobisch@gnu.org>

	* system.def: bug #527 system call x'91' *always* uses three parameters

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* common.h, intrinsic.c: Added CONTENT-LENGTH and CONTENTS-OF

2018-06-18  Ron Norman <rjn@inglenet.com>

	* fileio.c: Updates to the EXTFH logic
	   You can now actually compile using MF Visual COBOL and include the
	   GnuCOBOL libcob as follows:
	     cob -L/usr/local/lib -lcob -C "CALLFH=EXTFH"

2018-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: allow to override COB_EXPIMP, especially for allowing
	  static builds on _WIN32 via -DCOB_EXPIMP=extern

2018-05-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [_WIN32]: only define __GMP_LIBGMP_DLL if it is not
	  defined already, allowing to use a static version by defining
	  __GMP_LIBGMP_DLL to 0
	* Makefile.am (install-data-hook): added missing $(DESTDIR), as
	  reported by Eric Gallager in bug #73
