@@ -348,6 +348,16 @@
 #                    in a similar manner to the method used by Micro Focus
 #          Example:  LS_NULLS = TRUE
 
+# Environment name:  COB_LS_SPLIT
+#   Parameter name:  ls_split
+#          Purpose:  Defines for LINE SEQUENTIAL files what to do when a record
+#                    is longer than teh program handles. If 'ls_split=true' then
+#                    the data is returned as multiple records
+#             Type:  boolean
+#          Default:  false
+#                    The record is truncated and the file skips to the next LF
+#          Example:  LS_SPLIT = TRUE
+
 # Environment name:  COB_LS_VALIDATE
 #   Parameter name:  ls_validate
 #          Purpose:  Defines for LINE SEQUENTIAL files that the data should be
@@ -381,6 +391,17 @@
 #                    in a similar manner to the method used by Micro Focus COBOL
 #          Example:  LS_NULLS = TRUE
 
+# Environment name:  COB_MF_LS_SPLIT
+#   Parameter name:  mf_ls_split
+#          Purpose:  Defines for Micro Focus compatible LINE SEQUENTIAL files what 
+#                    to do when a record is longer than teh program handles. 
+#                    If 'mf_ls_split=true' then
+#                    the data is returned as multiple records
+#             Type:  boolean
+#          Default:  true
+#          Example:  MF_LS_SPLIT = FALSE
+
+#          Example:  LS_SPLIT = TRUE
 # Environment name:  COB_MF_LS_VALIDATE
 #   Parameter name:  mf_ls_validate
 #          Purpose:  Defines for Micro Focus compatible LINE SEQUENTIAL files 
